[project]
name = "izh"
version = "0.1.0"
description = "AI Backend with OpenAI, PostgreSQL, and Redis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.38.0",
    "openai>=1.54.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "numpy<2.0.0",
    "spacy>=3.7.2,<3.8.0",
    "torch>=2.9.0",
    "sentence-transformers>=5.1.2",
    "dateparser>=1.2.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz",
    "pydantic-ai>=1.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "pytest-mock>=3.11.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

